# Cuda_notes

./: README.md  deviceQuery.cu
cuda-samples/: CMakeLists.txt
